## Process this file with automake to produce Makefile.in
## Created by Anjuta - will *NOT* be overwritten

INCLUDES =

AM_CXXFLAGS = @PACKAGE_CFLAGS@ \
	 -Wall

lib_LTLIBRARIES = libanimorph.la

libanimorph_la_SOURCES = \
	BodySettings.cpp\
	FaceVector.cpp\
	Vertex.cpp\
	VertexVector.cpp\
	TextureVector.cpp\
	Face.cpp\
	Mesh.cpp\
	Skin.cpp\
        SkinVertex.cpp\
	Target.cpp\
	Hotspot.cpp\
	VertexGroup.cpp\
        FaceGroup.cpp\
	Color.cpp\
	EdgeStrip.cpp\
	Euler.cpp\
	MathUtil.cpp\
	Matrix.cpp\
	Quaternion.cpp\
	FileReader.cpp\
	FileWriter.cpp\
	Material.cpp\
	ObjExporter.cpp\
	DirectoryList.cpp\
	util.cpp\
	RIBExporter.cpp\
    	PoseTarget.cpp\
    	PoseSemiTarget.cpp\
    	PoseRotation.cpp\
    	PoseTranslation.cpp\
    	SmoothVertex.cpp\
    	RawMesh.cpp\
    	ColladaExporter.cpp\
    	xmlParser.cpp\
	OgreXMLExporter.cpp
    
libanimorph_la_LDFLAGS = 

libanimorph_la_LIBADD = @PACKAGE_LIBS@
