## Process this file with automake to produce Makefile.in

libanimorph_includedir = $(pkgincludedir)

libanimorph_include_DATA = \
	BodySettings.h\
	Face.h\
	Mesh.h\
    	Skin.h\
    	SkinVertex.h\
	Target.h\
	Vector3.h\
	Vector2.h\
	Vertex.h\
	VertexVector.h\
	FaceVector.h\
	TextureVector.h\
	Hotspot.h\
	VertexGroup.h\
    	FaceGroup.h\
	Color.h\
	util.h\
	EdgeStrip.h\
	Euler.h\
	MathUtil.h\
	Matrix.h\
	Quaternion.h\
	FileReader.h\
	FileWriter.h\
	Material.h\
	ObjExporter.h\
	DirectoryList.h\
	RIBExporter.h\
    	PoseTarget.h\
    	PoseSemiTarget.h\
    	PoseRotation.h\
    	PoseTranslation.h\
    	SmoothVertex.h\
    	RawMesh.h\
    	ColladaExporter.h\
	xmlParser.h\
	OgreXMLExporter.h

EXTRA_DIST = $(libanimorph_include_DATA)
