## Process this file with automake to produce Makefile.in

libmhgui_includedir = $(pkgincludedir)

libmhgui_include_DATA = \
    AbstractListener.h  \
    GLUTWrapper.h       \
    CGUtilities.h       \
    Console.h           \
    Image.h             \
    ImageSlider.h       \
    Panel.h             \
    MultiPanel.h        \
    Component.h         \
    Widget.h            \
    Window.h            \
    ImageData.h         \
    Tooltip.h           \
    Size.h              \
    Point.h             \
    Camera.h		    \
    Rect.h              \
    ImageSysListener.h  \
    ImageSliderSysListener.h\
    TextEntry.h\
    TextEntrySysListener.h\
    Label.h             \
    Texture.h		\
    Selector.h		\
    SelectorSysListener.h
    
EXTRA_DIST = $(libmhgui_include_DATA)
